Fix feed image cropping

--- a/app/assets/stylesheets/feed.scss
+++ b/app/assets/stylesheets/feed.scss
@@ -69,8 +69,7 @@
 }
 
 .image {
-  max-width: 100%;
-  flex-wrap: wrap;
+  width: 100%;
 }
 
 .container_message {
